# docker-coding-agent-sandbox

./: .gitignore  Dockerfile  README.md  agent-session.sh  compose.yml  entrypoint.sh  paste-screenshot.ps1  start.ps1  start.sh
.github/: dependabot.yml
.opencode/commands/: git-commit.md  refactor-audit.md
.opencode/skills/write-worklog/: SKILL.md
config/: AGENTS.md  claude-CLAUDE.md  claude-settings.json  litellm-config.yaml  omp-AGENTS.md  omp-config.yml  omp-models.yml  opencode-with-vllm-side.json  opencode.json
config/claude/: CLAUDE.md  claude.json  settings.json
config/claude-agents/: vision-analyzer.md
config/omp/: AGENTS.md  config.yml  mcp.json  models.yml  settings.json
config/opencode/: AGENTS.md  opencode.json
config/opencode/agents/: vision.md
config/opencode/commands/: git-commit.md  refactor-apply.md
config/opencode/skills/write-worklog/: SKILL.md
config/searxng/: limiter.toml  settings.yml
harness-proxy/: Cargo.toml  Dockerfile  PLAN.md  README.md
harness-proxy/src/: anthropic.rs  main.rs  openai.rs  stream.rs  translate.rs
ideas/: litellm-issue-tool_result-image-drop.md
patches/: wetty-csp.js  wetty-html.js
scripts/: .screenrc  agent-session.sh  agent-task.sh  analyze-image.js  claude-shim.js  entrypoint.sh  reset-sandbox.sh  test-searxng.sh  upload-server.js
scripts/upload-server/: app.js  index.html  style.css
workspace/: .mcp.json
