[package]
name = "harness-proxy"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Anthropic Messages -> OpenAI (vLLM) translating proxy. Replaces LiteLLM + claude-shim.js (issue #10)."

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-features off: drop native-tls/http2/system-proxy. rustls (pure Rust) keeps the
# musl->scratch static build clean; json for (de)serializing the vLLM chat payloads;
# stream to read vLLM's SSE chunks back (Step 3).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
# ReceiverStream: bridges the spawned upstream-reader task to axum's SSE response body (Step 3).
tokio-stream = "0.1"

[profile.release]
# Small, static, single-purpose proxy — optimize for size and a clean FROM scratch image.
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
